[package]
name = "webrender-text-view"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
app_units = "0.6"
euclid = "0.17"
gleam = "0.4"
lazy_static = "1.0"
libc = "0.2"

[dependencies.core-text]
path = "/Users/pcwalton/Source/core-foundation-rs/core-text"

[dependencies.pilcrow]
path = "../../pilcrow"

[dependencies.webrender]
path = "/Users/pcwalton/Source/webrender/webrender"
features = ["pathfinder", "debugger"]

[dependencies.webrender_api]
path = "/Users/pcwalton/Source/webrender/webrender_api"

[build-dependencies]
cbindgen = "0.5"
